@@ -14,37 +14,37 @@ import static com.job.common.enums.Permission.*;
 @RequiredArgsConstructor
 public enum Role {
 
-  USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE,
-                  CONSULTANT_READ,
-                  CONSULTANT_UPDATE,
-                  CONSULTANT_DELETE,
-                  CONSULTANT_CREATE
-          )
-  ),
-  CONSULTANT(
-          Set.of(
-                  CONSULTANT_READ,
-                  CONSULTANT_UPDATE,
-                  CONSULTANT_DELETE,
-                  CONSULTANT_CREATE
-          )
-  );
+    USER(Collections.emptySet()),
+    ADMIN(
+            Set.of(
+                    ADMIN_READ,
+                    ADMIN_UPDATE,
+                    ADMIN_DELETE,
+                    ADMIN_CREATE,
+                    CONSULTANT_READ,
+                    CONSULTANT_UPDATE,
+                    CONSULTANT_DELETE,
+                    CONSULTANT_CREATE
+            )
+    ),
+    CONSULTANT(
+            Set.of(
+                    CONSULTANT_READ,
+                    CONSULTANT_UPDATE,
+                    CONSULTANT_DELETE,
+                    CONSULTANT_CREATE
+            )
+    );
 
-  @Getter
-  private final Set<Permission> permissions;
+    @Getter
+    private final Set<Permission> permissions;
 
-  public List<SimpleGrantedAuthority> getAuthorities() {
-    var authorities = getPermissions()
-            .stream()
-            .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-            .collect(Collectors.toList());
-    authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-    return authorities;
-  }
+    public List<SimpleGrantedAuthority> getAuthorities() {
+        var authorities = getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return authorities;
+    }
 }
